--- a/r_file_v5.Rmd
+++ b/r_file_v5.Rmd
@@ -163,10 +163,6 @@ iii) Classic factor repartition with reasonable representation of each modality,
 Note that this is also the case for HeatingQC, GarageFinish, BsmtFinType1.  
 
 Intuitively, we said that both location and overall quality will impact SalePrice significantly. Let us check this with anova and ancova tests. 
-```{r, include = FALSE}
-levels(home$OverallQual) = c("-4.3","-3.3","-2.4", "-1.6", "-0.8", "-0.0", "0.7", "1.4", "2.0", "2.7")
-home$MSZoning = factor(home$MSZoning,levels(home$MSZoning)[c(1,3,5,4,2)])
-```
 
 ```{r, fig.height = 3, fig.align = "center"}
 library(gridExtra)
@@ -210,7 +206,7 @@ SalePrice highly depends on MSZoning, OverallQual and their interaction. So we w
 
 \textbf{III. Modelling and diagnostics}  
 Given the number of regressors, we choose models favouring feature sparsity. We implement stepwise selection with an AIC criterion. 
-We predict SalePrice's logarithm to improve our target smoothness and estimated residuals homoscedasticity. In our first model, we notice that our 8 outliers are located towards the extreme bottom values of SalePrice. They prevent us from validating our postulates, mainly homoscedasticity and gaussianity. Removing them gives a more robust model, but we thought of testing a second approach. We fit a second model where instead of removing the outliers after model fit, we use the winsor method to reaffect extreme values and normalise our data before model fit. Doing this greatly improves model robustness (the postulates) but also increases our MSE on test data. We choose to keep model1 for our fit as the aim is to predict data accurately. 
+We predict SalePrice's logarithm to improve our target smoothness and estimated residuals homoscedasticity. In our first model, we notice that our 8 outliers are located towards the extreme bottom values of SalePrice. They prevent us from validating our postulates, mainly homoscedasticity and gaussianity. Removing them gives a more robust model, but we thought of testing a second approach. We fit a second model where instead of removing the outliers after model fit, we use the winsor method to reaffect extreme values and normalise our data before model fit. Doing this improves model robustness (the postulates) but also meaningfully increases our MSE on test data. We choose to keep model1 for our fit as the aim is to predict data accurately.  
   
 ```{r, include = FALSE}
 winsor1 <- function (x, fraction=.05)
@@ -220,26 +216,25 @@ x[ x < lim[1] ] <- lim[1]
 x[ x > lim[2] ] <- lim[2]
 x}
 ```
-
 We noted earlier that many categorical variables could be considered uninformative or redundant. 
 - We removed factors with massively overrepresented categories: Street, Utilities, RoofMatl, Condition2, Heating, Electrical, Functional, GarageCond.  
 We also made some regroupments within factors to diminish cardinality, mostly for neighbourhood. 
 - Based on Anova tests, we removed other factors to improve model robustness: OverallCond, Exterior1st, Exterior2nd. OverallCond in particular was too specific and weakened our model by creating observations with leverage one.
 ```{r}
 # Ancova on OverallQual and OverallCond
-mod5 = lm(SalePrice~1 + OverallQual + OverallCond + OverallQual:OverallCond, data = home)
+mod5 <- lm(SalePrice~1 + OverallQual + OverallCond + OverallQual:OverallCond, data = home)
 anova(mod5)
 ```
 - For some features, we were not sure wether or not they had an influence, so we tested the model with and without them and removed them if they were not improving our score : HeatingQC, SaleCondition, BsmtFinType2, RoofStyle, ExterQual. 
-```{r}
-col_to_remove = c("Street", "Utilities", "RoofMatl", "Condition2","Heating", "Electrical", "Functional", "GarageCond","Exterior1st", "Exterior2nd", "OverallCond", "HeatingQC", "SaleCondition", "BsmtFinType2","RoofStyle", "ExterQual")
+```{r, include = FALSE}
+col_to_remove <- c("Street", "Utilities", "RoofMatl", "Condition2","Heating", "Electrical", "Functional", "GarageCond","Exterior1st", "Exterior2nd", "OverallCond", "HeatingQC", "SaleCondition", "BsmtFinType2","RoofStyle", "ExterQual")
 for (name in col_to_remove){cat(which(colnames(home)==name)," ")}
 ```
 
 ```{r, include=FALSE}
 # Elementary pruning and regrouping of categories
 # Regrouping neighbourhoods of less than 20 and 50 sales together 
-table_neighborhood= table(home$Neighborhood)
+table_neighborhood <- table(home$Neighborhood)
 table_neighborhood[order(table_neighborhood)]
 
 levels(home$Neighborhood) <- c(levels(home$Neighborhood), "N_Under20Sales","N_Under50Sales") 
@@ -264,28 +259,25 @@ home$ExterCond[home$ExterCond %in% c("Po", "Ex", "Fa", "Gd")] = "EC_Other"
 # OverallQual
 table(home$OverallQual)
 levels(home$OverallQual) <- c(levels(home$OverallQual), "Very_Low") 
-home$OverallQual[home$OverallQual %in% c("-4.3", "-3.3", "-2.4")] = "Very_Low"
+home$OverallQual[home$OverallQual %in% c("-4.27238846180047", "-3.28279659466729", "-2.38962301582022")] = "Very_Low"
 ```
 
 ```{r, include=FALSE}
-home_streamlined = home[-c(5, 8, 21, 13, 22, 23, 40, 66, 34, 37, 20, 59, 26, 55, 62, 38, 51, 17)]
+home_streamlined <- home[-c(5, 8, 21, 13, 37, 40, 51, 59, 22, 23, 17, 38, 66, 34, 20, 26, 17)]
 ```
   
 After working on our factors, we start by fitting a full linear model to predict log(SalePrice).
 ```{r, include = FALSE}
-full_model1 = lm(log(SalePrice)~., data = home_streamlined)
+full_model1 <- lm(log(SalePrice)~., data = home_streamlined)
 summary(full_model1)
 ```
 Running a model with all the variables excluding the ones we just removed, we obtain an adjusted R-squared of 0.91. 
 Many variables could be removed from our model while marginally affecting its efficiency to explain SalePrice. To improve model efficiency, we perform a selection of variables based on forward, backward and both methods. 
 ```{r, include = FALSE}
-# Reducing our number of features using the 3 selection methods seen in class (forward, backward, both)
 library(MASS)
-# Forward method :
+# Forward method, backward method, and both to reduce our number of features
 linear_select_variables_forward = stepAIC(full_model1, data=home_streamlined, trace=0, direction=c("forward"), verbose = FALSE)
-# Backward method
 linear_select_variables_backward = stepAIC(full_model1,~., trace=0, direction=c("backward") )
-# Both
 linear_select_variables_both = stepAIC(full_model1, trace=0, direction=c("both"))
 ```
 To choose among the three methods, we retrieve the AIC of each model and choose the one with the smallest AIC.  
@@ -294,7 +286,8 @@ extractAIC(linear_select_variables_forward)
 extractAIC(linear_select_variables_backward)
 extractAIC(linear_select_variables_both)
 ```
-We choose the model extracted by the backward or the both method as they have the same AIC, smaller than the one of the forward method. We arbitrarily choose the backward model. Let's ensure that the postulates are verified.   
+The 33-feature model extracted by backward and both is the same. Its AIC is smaller than the one of the forward method. We arbitrarily choose the backward model. 
+Let's verify that the postulates.   
 ```{r}
 # Validate (or not) the postulates 
 par(mfrow=c(3,3))
@@ -302,41 +295,43 @@ plot(linear_select_variables_backward, which=1) # P1
 plot(linear_select_variables_backward, which=3) # P2
 acf(residuals(linear_select_variables_backward), main= "Auto-correlation plot") # P3
 plot(linear_select_variables_backward, which=2) # P4
-plot(linear_select_variables_backward, which=5) # Cook
+plot(linear_select_variables_backward, which=5) # Cook's distance
 ```
-Looking at the graphs, the postulates are verified for this model.  
-Now, we want to verify that we don't have outliers in our model. 
+We validate P1, centered errors, without hesitation.  
+We notice a slight elliptical behaviour of our residuals in the Scale-Location plot, potentially problematic for P3 or residual homoscedasticity. Our model may predict extreme SalePrice values less well than others. However, we validate the postulate given the plot range of that behaviour (between 1 and 1.5). Observations 336, 199 and 596 have particularly high standardised residuals. 
+We do not validate P3, the uncorrelation assumption - one bar exceeds the fitted-line threshold.
+P4 can be validated, but again we notice the strange behaviour of tail values, towards the left-hand-side this time. Points which are not aligned with the normal distribution quantiles are limited given the number of observations we have. Note however that observations 199, 336 and 596 appear again: they are far from the theoretical quantiles. 
+None of our observations has a Cook distance bigger than one. Observation 199 is the closest to this threshold, meaning it has significant leverage and residual abnormality.The second closest is observation 596, again. 
+ 
+Let's perform an outlier analysis to see if this helps to validate our postulates. 
 ```{r, fig.width = 4, fig.height = 3, fig.align = "center"}
 library(car)
 influenceIndexPlot(linear_select_variables_backward)
 ```
-Cook's distance plot: according to the Cook's criteria, we don't observe any leverage point or regression outlier.  
-Studentized residuals plot: according to the plot, there are a lot of outliers (many points below -2), which is confusing. The two main outliers according to this criteria oare 524 and 1299. 
-Studentised residuals : big values
-Bonferroni's plot : we notice that 6 points have a p-value inferior to 0.5, so they are outliers according to this criteria.  
-Hat plot: two points (327 and 783) seem to be leverage points according to this criteria.  
-  
+Unsurprisingly, observations 199 and 596 are very clear outliers in nearly all our tests. In the Cook's distance plot, they are close to the 1 threshold albeit under it. Their studentised residuals values are smaller than -8 (versus a -2 assumption for a 95% confidence interval), Bonferroni is of order e-13, the hat values of order e-16. 
+Studentized residuals plot: 30 points are below -2, and 23 are over 2. Our model allows for ~55 outliers within a 95% confidence interval and we are within that threshold. Extreme values are preoccupying: observations 199, 336, 596, 618, 633, 692 and 809 are smaller than -4. 
+Bonferroni's plot : 6 points have a p-value inferior to 0.5, so they are outliers according to this criterion.  
+Hat plot: observations 459 and 687 have leverage at 0.68, well over 0.5.  
+
 Based on those results, we decided to run an outlier test for more precision: 
 ```{r}
 # Finding the outliers of our model
 outlierTest(linear_select_variables_backward)
 ```
-Using this test, 8 possible outliers are given according to the studentized criterion and Bonferroni p-value. We can now test our model without them.
-Note that those tests are based on confidence intervals, meaning it is normal that a proportion of our observations should be outliers. 
-
-```{r, include = FALSE}
+We confirm that 199, 596 and 336 are very clear outliers (and they have significant leverage). So we remove them without question. The other outliers we get by the outlier test are outliers by far also, so we remove them. 
+```{r}
 # Plotting our regression outliers
-home_streamlined[c(199, 596, 336, 618, 633, 692, 323, 809),1:ncol(home_streamlined)]
+home_streamlined[c(199, 596, 336, 692, 618, 633, 323, 809),1:ncol(home_streamlined)] 
 ```
 
 ```{r, include = FALSE}
 # Building the dataframe without those outliers 
-home_no_outliers = home_streamlined[-c(199, 596, 336, 618, 633, 692, 323, 809), ]
+home_no_outliers = home_streamlined[-c(199, 596, 336, 692, 618, 633, 323, 809)]
 ```
 
-```{r}
-# Displaying our regression model to use it on our new dataframe without outliers
-linear_select_variables_backward
+```{r, include = FALSE}
+# Getting our regression model to use it on our new dataframe without outliers
+summary(linear_select_variables_backward)
 ```
 
 ```{r}
@@ -350,7 +345,7 @@ model1 = lm(formula = log(SalePrice) ~ MSSubClass + MSZoning + LotFrontage +
     GarageCars + GarageQual + WoodDeckSF + MoSold + YrSold, data = home_no_outliers)
 ```
 
-```{r}
+```{r, include = FALSE}
 summary(model1)
 ```
 We now have a 93% of RMSE on train data.  
@@ -364,38 +359,35 @@ acf(residuals(model1), main= "Auto-correlation plot") # P3
 plot(model1, which=2) # P4
 plot(model1, which=5) # Cook's distance
 ```
-According to the graphs, P1 and P3 are validated without hesitation. 
-For P2, we notice a slight elliptic behaviour in the middle, but it seems limited enough to validate the postulate. 
-For P4, tail observations are further from the normal distribution. Based on the high number of observations in our dataframe and the few number of points not aligned with the normal distribution quantiles, we validate the postulate. 
-
-  
+The postulates are about verified for this model. 
+Residuals are centered. Scale-location is stil slightly elliptic, but we accept it. We now validate autocorrelation.Gaussianity still poses problem for tail values. And no observation has significant Cook distance. 
 ```{r, include = FALSE}
 home_streamlined$SalePrice= (winsor1(home$SalePrice, fraction=.05))
 full_model2 = lm(log(SalePrice)~., data = home_streamlined)
-model2 = stepAIC(full_model2,~., trace=0, direction=c("backward") )
+linear_select_variables_backward_winsor = stepAIC(full_model2,~., trace=0, direction=c("backward") )
 ```
 
-```{r}
-summary(model2)
+```{r, include = FALSE}
+summary(linear_select_variables_backward_winsor)
 ```
 We have an RMSE of 91% on train data. 
 ```{r}
 par(mfrow=c(3,3))
-plot(model2, which=1) # P1
-plot(model2, which=3) # P2
-acf(residuals(model2), main= "Auto-correlation plot") # P3
-plot(model2, which=2) # P4
-plot(model2, which=5) # Cook's distance
+plot(linear_select_variables_backward_winsor, which=1) # P1
+plot(linear_select_variables_backward_winsor, which=3) # P2
+acf(residuals(linear_select_variables_backward_winsor), main= "Auto-correlation plot") # P3
+plot(linear_select_variables_backward_winsor, which=2) # P4
+plot(linear_select_variables_backward_winsor, which=5) # Cook's distance
 ```
-
+This time, residuals are perfectly centered. We validate homoscedasticity and uncorrelation without question. Gaussianity is still troublesome for tail values. No observation has significant Cook's distance. Again, observations 336, 199, 596 can be singled out on all plots. 
 ```{r, fig.width = 4, fig.height = 3, fig.align = "center"}
-influenceIndexPlot(model2)
+influenceIndexPlot(linear_select_variables_backward)
 ```
 
 ```{r}
-outlierTest(model2)
+outlierTest(linear_select_variables_backward_winsor)
 ```
-
+We perform the outlier test to confirm our outliers. Without surprise, 199, 336 and 596 are regression outliers. 633 also is. We remove them. 
 ```{r, include = FALSE}
 home_streamlined[c(199, 336, 596, 633),1:ncol(home_streamlined)]
 ```
@@ -406,7 +398,7 @@ home_no_outliers = home_streamlined[-c(199, 336, 596, 633), ]
 ```
 
 ```{r, include = FALSE}
-model2
+linear_select_variables_backward_winsor
 ```
 
 ```{r}
@@ -419,27 +411,36 @@ model2 = lm(formula = log(SalePrice) ~ MSSubClass + MSZoning + LotFrontage +
     GarageQual + WoodDeckSF + MoSold + YrSold, data = home_no_outliers)
 ```
 
-```{r}
+```{r, include = FALSE}
 summary(model2)
 ```
-We have a 93% R-squared on train data. 
+We have a 93% R-squared on train data.
+```{r fig.width = 3, fig.height = 2, fig.align = "center"}
+plot(model2, which=2)
+```
+We approximately validate Gaussianity, while noting that it is the only assumption that is not always necessary among the postulates.
 \textbf{IV. Final models}  
-  
-Model parameters:  
-Finally, our final model without outliers is the one we built reaffecting some features, regrouping some categories for factors and retreving repretitive or non significant variables. Then, we used a backward selection method to reduce the number of features and keep only the necessary ones. Our model had 
-Our final model had 7 outliers that we decided to remove after outlier tests. 
-```{r, include = FALSe}
-summary(model1)
-summary(model2)
-```
-It can be written: lm(formula = log(SalePrice) ~ MSSubClass + MSZoning + LotFrontage + 
+
+    
+Model1 can be written lm(formula = log(SalePrice) ~ MSSubClass + MSZoning + LotFrontage + 
+    LotArea + LandContour + LotConfig + LandSlope + Neighborhood + 
+    Condition1 + OverallQual + YearBuilt + YearRemodAdd + MasVnrType + 
+    MasVnrArea + ExterCond + Foundation + BsmtCond + BsmtExposure + 
+    BsmtFinSF1 + BsmtUnfSF + CentralAir + GrLivArea + BsmtFullBath + 
+    FullBath + HalfBath + KitchenQual + Fireplaces + GarageType + 
+    GarageCars + GarageQual + WoodDeckSF + MoSold + YrSold, data = home_no_outliers)
+    
+Model 2 can be written: lm(formula = log(SalePrice) ~ MSSubClass + MSZoning + LotFrontage + 
     LotArea + LotConfig + Neighborhood + Condition1 + OverallQual + 
     YearBuilt + YearRemodAdd + MasVnrType + MasVnrArea + BsmtCond + 
     BsmtExposure + BsmtFinSF1 + BsmtUnfSF + TotalBsmtSF + CentralAir + 
     `1stFlrSF` + GrLivArea + BsmtFullBath + FullBath + HalfBath + 
     KitchenQual + Fireplaces + GarageType + GarageYrBlt + GarageCars + 
     GarageQual + WoodDeckSF + MoSold + YrSold, data = home_no_outliers)
-
+```{r}
+summary(model1)
+```
+In both our models, the intercept is crucial. 
 Looking at the coefficients, the most impactful features are MSZoning, OverallQual and Fireplaces by far, which is not suprising. Indeed, we stated in the beginning that the location was key. Also, the quality is very important because if conditions are not satisfied, then the flat would require some work, which cost would be deducted from the final price. Finally, having a fireplace is a good indicator of the standard of a home, as they tend to be built in expensive flats.
 ```{r, include=FALSE}
 # Testing our model on the test set 
@@ -451,8 +452,6 @@ test$MoSold = as.factor(test$MoSold)
 test$MSSubClass = as.factor(test$MSSubClass)
 test$Fireplaces = as.factor(test$Fireplaces)
 
-levels(test$OverallQual) = c("-4.3","-3.3","-2.4", "-1.6", "-0.8", "-0.0", "0.7", "1.4", "2.0", "2.7")
-test$MSZoning = factor(test$MSZoning,levels(test$MSZoning)[c(1,3,5,4,2)])
 # Regrouping neighbourhoods of less than 20 and 50 sales together
 levels(test$Neighborhood) <- c(levels(test$Neighborhood), "N_Under20Sales","N_Under50Sales") 
 test$Neighborhood[test$Neighborhood %in% c("Blueste","NPkVill","Veenker","BrDale","Blmngtn","MeadowV")] = "N_Under20Sales"
@@ -472,14 +471,21 @@ test$ExterCond[test$ExterCond %in% c("Po", "Ex", "Fa", "Gd")] = "EC_Other"
 
 # OverallQual
 levels(test$OverallQual) <- c(levels(test$OverallQual), "Very_Low") 
-test$OverallQual[test$OverallQual %in% c("-4.3", "-3.3", "-2.4")] = "Very_Low"
+test$OverallQual[test$OverallQual %in% c("-4.27238846180047", "-3.28279659466729", "-2.38962301582022")] = "Very_Low"
 ```
+
+
 
 ```{r}
 # We look for the average percentage of SalePrice that we fail to predict
 sqrt(mean((test$SalePrice - exp(predict.lm(model1, test))) ^ 2))
 sqrt(mean((test$SalePrice - exp(predict.lm(model2, test))) ^ 2))
 ```
+
+```{r, include = FALSe}
+summary(model1)
+```
+
 Testing our regression model on the test set, we fail to predict around 13% of the sale price, which corresponds to a RMSE of ~24k, for homes with an average price avec ~180k. This seems acceptable for the price of a home.  
 We obtain a p-value that is below 2.2e-16, which is much less than 0.05. We reject the null hypothesis that the intercept only is better to explain our SalePrice than the model we have built.  
 
