--- a/r_file_v5.Rmd
+++ b/r_file_v5.Rmd
@@ -17,10 +17,9 @@ We then perform elementary factor pruning and intra-factor modality regrouping b
   
 We choose to fit two linear models using stepwise selection procedure with the AIC criterion to foster sparsity. In the first model, the only modification we impose on the output is applying the logarithm, before removing outliers after testing them. In the second model, we apply a winsorisation method to log(SalePrice) as we noticed that most outliers located to the LHS of price made our model less robust.  In both cases, our best model according to AIC is the backward selection model. Model 1 predicts the test data much more accurately than model 2 (24 000$ vs 33 000$), but model 2 validates the regression assumptions better. XXXX what do we predict better?? We choose to retain model 1 as we want our model to generalise well, and model 1 is satisfactory enough on the postulates. 
 Our final model has an MSE of XX.  
-  
     
   
-\textbf{I. Data description} 
+\textbf{I. Introduction - Data description} 
 We first explore the pre-processed data to get intuition of an efficient model. Understanding and preprocessing the data implies that we understand what we are given, check that there are no missing values, and that R correctly categorises each regressor. 
 
 ```{r, include = FALSE}
@@ -57,7 +56,7 @@ We check there are no missing values in the pre-processed data before launching 
 cat("There are", sum(is.na(home)), "missing values in our dataframe.")
 ```
   
-\textbf{II. Data exploration} 
+\textbf{II. Exploratory data analysis - Initial modeling} 
   
 1. Numerical analysis.  
 We describe the output data before analysing the correlation matrix. A PCA analysis we performed showed us that 23/28 numerical variables accounted for 99% of the variance. We left it out for concision. 
@@ -110,9 +109,9 @@ qqnorm(home_numerical$`1stFlrSF`,cex.main = 1.2)
 ```
 From these three graphs, we can assume a Gaussian distribution on 1stFloorSF. 
   
-PCA 
-Because PCA works best with (scaled) numerical data, we will perform it on the numerical features of our preprocessed data.
-```{r, fig.width = 5, fig.height = 3, fig.align = "center"}
+
+Because PCA works best with (scaled) numerical data, we perform it on the numerical features of our preprocessed data. 19/23 numerical variables account for ~99% of the variance. 
+```{r, fig.width = 5, fig.height = 3, fig.align = "center", include = FALSE}
 home_numerical_output = home_numerical$SalePrice
 home_numerical_features = home_numerical[,2:ncol(home_numerical)] # we will perform the PCA analysis on this dataset. 
 
@@ -135,7 +134,6 @@ plot(cumsum(prop_varex),
 abline(h=1, col='red')
 abline(v=19, col='black', lty = 3)
 ```
-19/23 numerical variables account for ~99% of the variance. 
 
 3. Factor analysis  
 We first investigate level fragmentation within the factors. We discover three types of factors, as per examples below.  
@@ -204,7 +202,7 @@ anova(mod3)
 ```
 SalePrice highly depends on MSZoning, OverallQual and their interaction. So we will keep these factors.  
 
-\textbf{III. Modelling and diagnostics}  
+\textbf{III. Modeling and diagnostics}  
 Given the number of regressors, we choose models favouring feature sparsity. We implement stepwise selection with an AIC criterion. 
 We predict SalePrice's logarithm to improve our target smoothness and estimated residuals homoscedasticity. In our first model, we notice that our 8 outliers are located towards the extreme bottom values of SalePrice. They prevent us from validating our postulates, mainly homoscedasticity and gaussianity. Removing them gives a more robust model, but we thought of testing a second approach. We fit a second model where instead of removing the outliers after model fit, we use the winsor method to reaffect extreme values and normalise our data before model fit. Doing this improves model robustness (the postulates) but also meaningfully increases our MSE on test data. We choose to keep model1 for our fit as the aim is to predict data accurately.  
   
@@ -348,7 +346,7 @@ model1 = lm(formula = log(SalePrice) ~ MSSubClass + MSZoning + LotFrontage +
 ```{r, include = FALSE}
 summary(model1)
 ```
-We now have a 93% of RMSE on train data.  
+We now have an adjusted r-squared of 93% on train data.  
   
 ```{r, message= FALSE, comment=FALSE}
 # Testing the postulates on our model 1
@@ -370,7 +368,7 @@ linear_select_variables_backward_winsor = stepAIC(full_model2,~., trace=0, direc
 ```{r, include = FALSE}
 summary(linear_select_variables_backward_winsor)
 ```
-We have an RMSE of 91% on train data. 
+We have an adjusted r-squared of 91% on train data. 
 ```{r}
 par(mfrow=c(3,3))
 plot(linear_select_variables_backward_winsor, which=1) # P1
@@ -384,21 +382,13 @@ This time, residuals are perfectly centered. We validate homoscedasticity and un
 influenceIndexPlot(linear_select_variables_backward)
 ```
 
-```{r}
+```{r, include = FALSE}
 outlierTest(linear_select_variables_backward_winsor)
 ```
 We perform the outlier test to confirm our outliers. Without surprise, 199, 336 and 596 are regression outliers. 633 also is. We remove them. 
 ```{r, include = FALSE}
 home_streamlined[c(199, 336, 596, 633),1:ncol(home_streamlined)]
-```
-
-
-```{r, include = FALSE}
 home_no_outliers = home_streamlined[-c(199, 336, 596, 633), ]
-```
-
-```{r, include = FALSE}
-linear_select_variables_backward_winsor
 ```
 
 ```{r}
@@ -419,29 +409,8 @@ We have a 93% R-squared on train data.
 plot(model2, which=2)
 ```
 We approximately validate Gaussianity, while noting that it is the only assumption that is not always necessary among the postulates.
+  
 \textbf{IV. Final models}  
-
-    
-Model1 can be written lm(formula = log(SalePrice) ~ MSSubClass + MSZoning + LotFrontage + 
-    LotArea + LandContour + LotConfig + LandSlope + Neighborhood + 
-    Condition1 + OverallQual + YearBuilt + YearRemodAdd + MasVnrType + 
-    MasVnrArea + ExterCond + Foundation + BsmtCond + BsmtExposure + 
-    BsmtFinSF1 + BsmtUnfSF + CentralAir + GrLivArea + BsmtFullBath + 
-    FullBath + HalfBath + KitchenQual + Fireplaces + GarageType + 
-    GarageCars + GarageQual + WoodDeckSF + MoSold + YrSold, data = home_no_outliers)
-    
-Model 2 can be written: lm(formula = log(SalePrice) ~ MSSubClass + MSZoning + LotFrontage + 
-    LotArea + LotConfig + Neighborhood + Condition1 + OverallQual + 
-    YearBuilt + YearRemodAdd + MasVnrType + MasVnrArea + BsmtCond + 
-    BsmtExposure + BsmtFinSF1 + BsmtUnfSF + TotalBsmtSF + CentralAir + 
-    `1stFlrSF` + GrLivArea + BsmtFullBath + FullBath + HalfBath + 
-    KitchenQual + Fireplaces + GarageType + GarageYrBlt + GarageCars + 
-    GarageQual + WoodDeckSF + MoSold + YrSold, data = home_no_outliers)
-```{r}
-summary(model1)
-```
-In both our models, the intercept is crucial. 
-Looking at the coefficients, the most impactful features are MSZoning, OverallQual and Fireplaces by far, which is not suprising. Indeed, we stated in the beginning that the location was key. Also, the quality is very important because if conditions are not satisfied, then the flat would require some work, which cost would be deducted from the final price. Finally, having a fireplace is a good indicator of the standard of a home, as they tend to be built in expensive flats.
 ```{r, include=FALSE}
 # Testing our model on the test set 
 test = test[,2:ncol(test)]
@@ -474,22 +443,40 @@ levels(test$OverallQual) <- c(levels(test$OverallQual), "Very_Low")
 test$OverallQual[test$OverallQual %in% c("-4.27238846180047", "-3.28279659466729", "-2.38962301582022")] = "Very_Low"
 ```
 
-
-
 ```{r}
-# We look for the average percentage of SalePrice that we fail to predict
-sqrt(mean((test$SalePrice - exp(predict.lm(model1, test))) ^ 2))
-sqrt(mean((test$SalePrice - exp(predict.lm(model2, test))) ^ 2))
+# Computing the test RMSE for model 1 and model 2 
+cat("RMSE for model 1 is", sqrt(mean((test$SalePrice - exp(predict.lm(model1, test))) ^ 2)), " dollars")
+cat(" and RMSE for model 2 is", sqrt(mean((test$SalePrice - exp(predict.lm(model2, test))) ^ 2)), " dollars")
 ```
+Even though our first model is less robust than the second, its test error is much lower. So this is the one we will retain since it still validates our postulates. 
+Let us analyse its coefficients in detail. 
 
-```{r, include = FALSe}
-summary(model1)
-```
+Model1 can be written lm(formula = log(SalePrice) ~ MSSubClass + MSZoning + LotFrontage + 
+    LotArea + LandContour + LotConfig + LandSlope + Neighborhood + 
+    Condition1 + OverallQual + YearBuilt + YearRemodAdd + MasVnrType + 
+    MasVnrArea + ExterCond + Foundation + BsmtCond + BsmtExposure + 
+    BsmtFinSF1 + BsmtUnfSF + CentralAir + GrLivArea + BsmtFullBath + 
+    FullBath + HalfBath + KitchenQual + Fireplaces + GarageType + 
+    GarageCars + GarageQual + WoodDeckSF + MoSold + YrSold, data = home_no_outliers)
+With a 92% adjusted r-squared on train, validation of our postulates and a 24.5k$ RMSE on test, it is the model that we keep. 
+Its most important features are: 
+-Location and area (MSZoning, neighbourhood)
+-Quality and condition (OverallQual,GarageQual, KitchenQual)
+-YearBuilt and YearRemodAdd
+As expected, location , quality and condition, and construction/improvement year are our most important features with a high level of significance. 
 
-Testing our regression model on the test set, we fail to predict around 13% of the sale price, which corresponds to a RMSE of ~24k, for homes with an average price avec ~180k. This seems acceptable for the price of a home.  
-We obtain a p-value that is below 2.2e-16, which is much less than 0.05. We reject the null hypothesis that the intercept only is better to explain our SalePrice than the model we have built.  
+Model 2 can be written: lm(formula = log(SalePrice) ~ MSSubClass + MSZoning + LotFrontage + 
+    LotArea + LotConfig + Neighborhood + Condition1 + OverallQual + 
+    YearBuilt + YearRemodAdd + MasVnrType + MasVnrArea + BsmtCond + 
+    BsmtExposure + BsmtFinSF1 + BsmtUnfSF + TotalBsmtSF + CentralAir + 
+    `1stFlrSF` + GrLivArea + BsmtFullBath + FullBath + HalfBath + 
+    KitchenQual + Fireplaces + GarageType + GarageYrBlt + GarageCars + 
+    GarageQual + WoodDeckSF + MoSold + YrSold, data = home_no_outliers)
+It has a 93% adjusted R-squared on train, validates the postulates, and a 31.0K$ RMSE on test.
+Again we see location with neighbourhood and quality (OverallQual, GarageQual) as important predictors. 
 
-Confidence interval: as our regression model is mostly impacted by factors, doing confidence intervals does not help us visualize the proximity among SalePrice and the most important features. However, doing a 95% confidence interval with LotArea, we notice that this variable is not good at emplaning SalePrice by itself, as the price can double for a same value of LotArea. 
+In both cases, testing our model against the intercept we obtain a p-value of order e-16: we confidently reject the hypothesis that the intercept-reduced model is better to explain SalePrice than our model.  
+Confidence intervals: as our regression model is mostly impacted by factors, doing confidence intervals does not help us visualize the proximity among SalePrice and the most important features. However, doing a 95% confidence interval with LotArea, we notice that this variable is not good at explaning SalePrice by itself, as the price can double for a same value of LotArea. 
 ```{r, fig.width=5, fig.height=3, fig.align="center"}
 model <- lm(SalePrice ~ LotArea, data=home)
 plot(home$LotArea, home$SalePrice, xlab="LotArea", ylab="SalePrice", main="Regression", cex.main=0.8, cex.axis=0.5, cex.lab=0.5)
@@ -503,10 +490,28 @@ lines(newx, pred_interval[,3], col="orange", lty=2)
 ```
 
 
+```{r, fig.width=5, fig.height=3, include = FALSE}
+library(glmnet)
+#x_train = home[,1:]
+#y_train
+#fit = glmnet()
+```
+
 \textbf{V. Discussion}  
-  
-Final conclusions on our model:
-In the end, we improved a lot the model that we have compared to the one we had when running a linear regression on the original dataframe, as our postulates are now better validated with twice as less features.  
-  
-This project enabled us to apply all the methods we saw in class to analyze a given dataframe and find an acceptable manner to transform it into a more efficient dataframe. Working in pair was very positive, because it allowed us to get more ideas, and to share our understanding of the functions. We could be more efficient next time now that we have gained insights into the R manner to solve a regression problem.  
-To go further, we could have used a lasso regression because we still have around 30 features. We tried to do so but had struggles plotting our postulates afterwards, and therefore could not conclude. However, we will learn how to do it as it could have been very useful.  
+Compared to the full linear model run on the-processed dataset, our postulates are now much better validated with twice as less features (33 instead of 67).  
+Plotting our errors as a function of SalePrice shows that we perform well under 300K dollars, and badly above with very high residuals for extreme values, which skew the mean residuals towards the top: 
+```{r, fig.width=5, fig.height=3,fig.align = "center", }
+# Graphical visualisation of our prediction errors
+test_residuals = (test$SalePrice - exp(predict.lm(model2, test))) ^ 2
+plot(test$SalePrice, test_residuals, main = "Test error as a function of SalePrice")
+```
+Our residuals are small for prices under 300K dollars, but increase a lot above. It would be interesting to fit a model on SalePrices that are above this threshold, another one on those under, and then average our predictions to make our final model. 
+```{r}
+cat("As we could infer from the plot, the skewness of our test residuals is very high at ", skewness(test_residuals))
+```
+
+Given that we still use 33 regressors, averaging the predictions of a lasso, a ridge and an elastic net could have been another solution to improve predictions and model robustness. We tried to do so but had struggles plotting our postulates afterwards, and therefore could not conclude. However, we will learn how to do it as it could have been very useful.  
+
+\textbf{VI. Bonus}  
+Here is a quick try at implementing the first solution: 
+
